# HybridOctree_Hex

./: LICENSE  README.md  bottle1.vtk
HybridOctree_Hex/: CMakeCache.txt  CMakeLists.txt  CellQueue.h  ErrorMessage.txt  HexGen.aps  HexGen.cpp  HexGen.filters  HexGen.h  HexGen.sln  Initialization.h  Main.cpp  Makefile  Mesh.cpp  StaticVars.h  cmake_install.cmake
HybridOctree_Hex_v1.0/: CMakeLists.txt  CellQueue.h  HexGen.cpp  HexGen.vcxproj  HexGen.vcxproj.filters  Initialization.h  Main.cpp  Makefile  Mesh.h  StaticVars.h
input boundaries/: Cup1_tri.raw  Kiss_tri.raw  airplane1_tri.raw  airplane2_tri.raw  ant2_tri.raw  armchair_tri.raw  bimba_tri.raw  bird_input_tri.raw  blade_input_tri.raw  bone_tri.raw  botijo_tri.raw  bottle1_tri.raw  bottle2_tri.raw  bumpy_sphere_tri.raw  bumpy_torus_tri.raw  bunny_tri.raw  buste_tri.raw  camel_tri.raw  camille_hand_tri.raw  chair1_tri.raw  chair_tri.raw  chinese_lion_tri.raw  cup_tri.raw  dancer2_tri.raw  dancer_tri.raw  dancing_children_tri.raw  david_tri.raw  dente_tri.raw  dilo_tri.raw  dino2_tri.raw  dino_tri.raw  dragon_stand_tri.raw  dragonstand2_tri.raw  dtorus_tri.raw  duck2_tri.raw  duck_tri.raw  eight_tri.raw  elephant_tri.raw  elk_tri.raw  eros_tri.raw  (+52 more)
our results/: airplane1.vtk  airplane2.vtk  bird.vtk  bone.vtk  bumpy_sphere.vtk  bunny.vtk  chair1.vtk  dancer2.vtk  deformed_armadillo.vtk  dtorus.vtk  eight.vtk  fertility.vtk  fish2.vtk  genus3.vtk  glass1.vtk  glass2.vtk  holes3.vtk  kitten.vtk  max.vtk  pear.vtk  ramses.vtk  retinal.vtk  sediapatch.vtk  teaport.vtk  toy1.vtk  toy2.vtk  uu-memento.vtk  venus.vtk  (+1 more)
